--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html> 
 <head>
-    <title>Date Widget Notion</title> 
+    <title>Notion Greeting Widget</title> 
     <style>
       #lbl {
         display: flex;
-        font-family: sans-serif;
+        font-family: fantasy;
         font-size: 18pt;
         color: #ff5757;
         padding: 5px;
