--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
       #lbl {
         display: flex;
-        font-family: fantasy;
+        font-family: "Copperplate", fantasy;
         font-size: 18pt;
         color: #ff5757;
         padding: 5px;
