--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'good morning :)';
+        greet = 'good morning, have a great day!';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon :)';
+        greet = 'good afternoon, are you making the best of your day?';
     else if (hrs >= 17 && hrs <= 24)
-        greet = 'good evening :)';
+        greet = 'good evening, hope your day was good :)';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
