--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     if (hrs < 12)
         greet = 'good morning, have a great day!';
     else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon, are you making the best of your day?';
+        greet = 'good afternoon, make this a nice day.';
     else if (hrs >= 17 && hrs <= 24)
         greet = 'good evening, hope your day was good :)';
 
