--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         display: flex;
         font-family: "Copperplate", fantasy;
         font-size: 18pt;
-        color: #ff5757;
+        color: #d89434;
         padding: 5px;
         border: 1px solid #ffffff;
         justify-content: left;
