--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
         greet = 'good afternoon, make this a nice day.';
     else if (hrs >= 17 && hrs <= 24)
         greet = 'good evening, hope your day was good :)';
+    
+    var hi = "hey there!"
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
+          <div class="hi">${hi}</div>
           <div id="date"> ${date}</div>
           <div class="greeting">${greet}</div>
         <div/>
