--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     document.getElementById('lbl').innerHTML = `
         <div class="container">
           <div class="hi">${hi}</div>
-          <div id="date"> ${date}</div>
+          <div id="date"> "it's " + ${date}</div>
           <div class="greeting">${greet}</div>
         <div/>
     `;
