--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
       #lbl {
         display: flex;
         font-family: "Copperplate", fantasy;
-        font-size: 18pt;
+        font-size: 24pt;
         color: #d89434;
         padding: 5px;
         border: 1px solid #ffffff;
-        justify-content: left;
+        justify-content: middle;
         line-height: 1.5;
         height:85%;
         font-weight: bold;
