--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         color: #d89434;
         padding: 5px;
         border: 1px solid #ffffff;
-        justify-content: middle;
+        justify-content: center;
         line-height: 1.5;
         height:85%;
         font-weight: bold;
@@ -22,7 +22,7 @@
       }
 
       #date{
-          font-size:12pt;
+          font-size:18pt;
           font-weight: bold;
       }
 
